--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
     <title>Bag-website</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="nav-container">
+            <div class="logo-items">
+                <img src="./resources/nav-image/urban-hive.png" alt="">
+                <p>Urban<span class="hive">Hive</span></p>
+            </div>
+            <div class="btn-items">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Product</a>
+                <a class="login" href="">Login<i class="fa-solid fa-right-to-bracket"></i></a>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
