banner section done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <!-- nav section starts here -->
     <nav>
         <div class="nav-container">
             <div class="logo-items">
@@ -23,5 +24,27 @@
             </div>
         </div>
     </nav>
+    <!-- nav section ends here -->
+
+    <!-- nav banner starts here -->
+    <section class="banner-container">
+        <div class="text-content">
+            <h1>Man Bags</h1>
+            <p>New Men's collections</p>
+            <div class="banner-icon">
+               <span class="icon"><i class="fa-brands fa-facebook"></i></span>
+               <span class="icon"><i class="fa-brands fa-twitter"></i></span>
+               <span class="icon"><i class="fa-brands fa-youtube"></i></span>
+               <span class="icon"><i class="fa-brands fa-instagram"></i></span>
+            </div>
+            <button class="btn-primary">See More</button>
+            <button class="btn-primary">Shop Now</button>
+        </div>
+        <div class="img-content">
+            <img src="./resources/banner-image/bag-picture.jpg" alt="">
+        </div>
+    </section>
+    <!-- nav banner ends here -->
+    
 </body>
 </html>
