--- a/index.html
+++ b/index.html
@@ -164,6 +164,93 @@
         </div>
     </section>
     <!-- All product section ends here -->
-    
+
+    <!-- discount section starts here -->
+    <section class="discount-container">
+        <div class="discount-img">
+            <img src="./resources/discount/React-removebg-preview.png" alt="">
+            <div class="disc">30%</div>
+        </div>
+        <div class="discount-text">
+            <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br> Officiis, numquam!</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur quisquam maxime <br> vitae temporibus commodi rerum laboriosam quidem eveniet, fugit debitis.  </p>
+            <button class="buy">Buy Now</button>
+        </div>
+    </section>
+
+    <!-- discount section ends here -->
+
+    <!-- Customer review section starts here -->
+
+    <h1 style="text-align: center;">Customer Review</h1>
+
+    <section class="customer-review-container">
+        <div class="custom-card">
+            <div class="cutomer-name">
+                <img src="./resources/customer-picture/person.png" alt="">
+                <h3>Mr. customer</h3>
+                <h5>18/07/2023</h5>
+             </div>
+             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, similique?</p>
+        </div>
+        <div class="custom-card">
+            <div class="cutomer-name">
+                <img src="./resources/customer-picture/person.png" alt="">
+                <h3>Mr. customer</h3>
+                <h5>18/07/2023</h5>
+             </div>
+             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, similique?</p>
+        </div>
+        <div class="custom-card">
+            <div class="cutomer-name">
+                <img src="./resources/customer-picture/person.png" alt="">
+                <h3>Mr. customer</h3>
+                <h5>18/07/2023</h5>
+             </div>
+             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, similique?</p>
+        </div>
+        <div class="custom-card">
+            <div class="cutomer-name">
+                <img src="./resources/customer-picture/person.png" alt="">
+                <h3>Mr. customer</h3>
+                <h5>18/07/2023</h5>
+             </div>
+             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, similique?</p>
+        </div>
+        <div class="custom-card">
+            <div class="cutomer-name">
+                <img src="./resources/customer-picture/person.png" alt="">
+                <h3>Mr. customer</h3>
+                <h5>18/07/2023</h5>
+             </div>
+             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, similique?</p>
+        </div>
+        <div class="custom-card">
+            <div class="cutomer-name">
+                <img src="./resources/customer-picture/person.png" alt="">
+                <h3>Mr. customer</h3>
+                <h5>18/07/2023</h5>
+             </div>
+             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, similique?</p>
+        </div>
+        <div class="custom-card">
+            <div class="cutomer-name">
+                <img src="./resources/customer-picture/person.png" alt="">
+                <h3>Mr. customer</h3>
+                <h5>18/07/2023</h5>
+             </div>
+             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, similique?</p>
+        </div>
+        <div class="custom-card">
+            <div class="cutomer-name">
+                <img src="./resources/customer-picture/person.png" alt="">
+                <h3>Mr. customer</h3>
+                <h5>18/07/2023</h5>
+             </div>
+             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, similique?</p>
+        </div>
+    </section>
+
+    <!-- Customer review section ends here -->
 </body>
 </html>
