--- a/index.html
+++ b/index.html
@@ -252,5 +252,15 @@
     </section>
 
     <!-- Customer review section ends here -->
+
+    <!-- footer starts -->
+      <section class="footer">
+        <div class="logo-items foot">
+            <img src="./resources/nav-image/urban-hive.png" alt="">
+            <p>Urban<span class="hive">Hive</span></p>
+            
+        </div>
+        <p>Buy Anything @ Shopping @ 2010-2023 Ecommerce Bangladesh</p>
+      </section>
 </body>
 </html>
