--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="nav-container">
             <div class="logo-items">
                 <img src="./resources/nav-image/urban-hive.png" alt="">
-                <p>Urban<span class="hive">Hive</span></p>
+                <h2>Urban<span class="hive">Hive</span></h2>
             </div>
             <div class="btn-items">
                 <a href="">Home</a>
@@ -255,9 +255,9 @@
 
     <!-- footer starts -->
       <section class="footer">
-        <div class="logo-items foot">
+        <div class="foot">
             <img src="./resources/nav-image/urban-hive.png" alt="">
-            <p>Urban<span class="hive">Hive</span></p>
+            <h2>Urban<span class="hive">Hive</span></h2>
             
         </div>
         <p>Buy Anything @ Shopping @ 2010-2023 Ecommerce Bangladesh</p>
